--- a/config-sample.ini
+++ b/config-sample.ini
@@ -1,8 +1,6 @@
 [database]
-host=localhost
-user=<Your Username>
-password=<Your Password>
-database =<Your Database>
+path = instance/qqzhu.db
 
 [server]
 port = 80
+admin_token = changeme
